[metadata]
name = pyjwt-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = JSON Web Token implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/pyjwt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = jwt
packages = find:
python_requires = >=3.9
install_requires =
	pycryptodomex >= 3.21

[options.packages.find]
where = jwt

